--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,3 +8,10 @@ repos:
     hooks:
       - id: flake8
         args: [--max-line-length=120]
+  - repo: local
+    hooks:
+      - id: coverage-check
+        name: Coverage Check
+        entry: ./scripts/check_coverage.sh
+        language: system
+        pass_filenames: false
