--- a/.github/workflows/test-and-coverage.yml
+++ b/.github/workflows/test-and-coverage.yml
@@ -25,12 +25,21 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r dev-requirements.txt
+          pip install coveralls
 
       - name: Run Tests and Coverage
         run: |
           pytest --cov=src --cov-report=xml --cov-fail-under=85
 
-      - name: Upload Coverage Report
+      - name: Upload coverage to Coveralls
+        env:
+          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+        run: |
+          coverage run --source=src -m pytest tests/
+          coverage report --fail-under=85
+          coveralls
+
+      - name: Upload Coverage Report Artifact
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
